tests/baselines/reference/ES5For-ofTypeCheck4(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ES5For-ofTypeCheck4.ts(2,17): error TS2454: Variable 'union' is used before being assigned.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ES5For-ofTypeCheck4.ts (1 errors) ====
    var union: string | string[];
    for (const v of union) { }
                    ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.